# protein-physchem

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: example_usage.py
protein_physchem/: __main__.py  analysis.py  scales.py
protparam_offline/: __init__.py  cli.py  io_handler.py
