[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protein-physchem"
version = "0.1.0"
description = "Offline ProtParam-style physicochemical analysis of protein sequences with CSV/TSV/Excel/FASTA I/O."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Deepbendu Das"}]
keywords = ["bioinformatics", "protein", "protparam", "physicochemical", "biopython"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biopython>=1.79",
    "pandas>=1.3",
    "openpyxl>=3.0",
]

[project.scripts]
protein-physchem = "protparam_offline.cli:main"

[project.urls]
Source = "https://example.com/protparam-offline"

[tool.setuptools.packages.find]
include = ["protparam_offline*"]
